--- a/Support Docs/2137_lab1_report.tex
+++ b/Support Docs/2137_lab1_report.tex
@@ -1,5 +1,5 @@
-% Lab 1 Git Latex
-% Created: 2020-01-16, Jake Simmons
+% Digital Logic Report Template
+% Created: 2020-01-10, John Miller
 
 %==========================================================
 %=========== Document Setup  ==============================
@@ -60,8 +60,8 @@
 %=========== Body  ====================================
 \begin{document}
 
-\title{ELC 2137 Lab \#\#: Lab Title}
-\author{Put your name(s) here}
+\title{ELC 2137 Lab \#\#: Lab 1 Git Latex}
+\author{Jake Simmons}
 
 \maketitle
 
@@ -79,7 +79,11 @@ Answer questions posed in the lab assignment here.
 \section*{Results}
 
 In this section, put your simulation waveforms, results tables, pictures of hardware, and any other required items.
-
+\begin{figure}[ht]\centering				
+		\includegraphics[width=1\textwidth]{sim_waveform}
+		\caption{Table and simulation waveform to reproduce}
+		\label{fig:original_logo}
+\end{figure}
 
 \section*{Code}
 
