--- a/Support Docs/2137_lab1_report.tex
+++ b/Support Docs/2137_lab1_report.tex
@@ -80,7 +80,14 @@ Answer questions posed in the lab assignment here.
 
 In this section, put your simulation waveforms, results tables, pictures of hardware, and any other required items.
 \begin{figure}[ht]\centering				
-		\includegraphics[width=1\textwidth]{sim_waveform}
+		\includegraphics[width=1\textwidth]{lab1_example_screenshot(1)}
+		Adjust size: height=1 %(length)
+		width=1 (length)
+		scale=1 %(0 to 1)
+		Rotate: angle=1 %(degrees)
+		Cropping: trim=1 2 3 4 %(order is: left bottom right top)
+		clip %(this removes what you just trimmed)
+		Choose page of a pdf: page=1
 		\caption{Table and simulation waveform to reproduce}
 		\label{fig:original_logo}
 \end{figure}
