cropping and table

--- a/Support Docs/2137_lab1_report.tex
+++ b/Support Docs/2137_lab1_report.tex
@@ -80,7 +80,7 @@ Answer questions posed in the lab assignment here.
 
 In this section, put your simulation waveforms, results tables, pictures of hardware, and any other required items.
 \begin{figure}[ht]\centering				
-		\includegraphics[width=1\textwidth]{lab1_example_screenshot(1)}
+	\includegraphics[width=1\textwidth]{lab1_example_screenshot(1).PNG}
 		Adjust size: height=1 %(length)
 		width=1 (length)
 		scale=1 %(0 to 1)
