--- a/Lab 1 Git Latex/2137_lab1_report.tex
+++ b/Lab 1 Git Latex/2137_lab1_report.tex
@@ -90,7 +90,7 @@ Answer questions posed in the lab assignment here.
 		\bottomrule
 	\end{tabular}\medskip
 			
-	\includegraphics[width=1\textwidth,trim={19cm 15cm 0cm 3.5cm},clip]{lab1_example_screenshot (1).PNG}
+	\includegraphics[width=1\textwidth,trim={19cm 15cm 0cm 3.5cm},clip]{lab1_example_screenshot.PNG}
 		\caption{ERT of Table and Simulation Waveform Reproduced}
 		\label{fig:original_logo}
 		
@@ -100,13 +100,5 @@ Answer questions posed in the lab assignment here.
 \clearpage
 \section*{Code}
 
-module example_or(
-input a, b,
-output c
-);
-
-// c = a OR b
-or(c,a,b);	
-endmodule
 
 \end{document}
