Added Example Code

--- a/Lab 1 Git Latex/2137_lab1_report.tex
+++ b/Lab 1 Git Latex/2137_lab1_report.tex
@@ -95,10 +95,10 @@ Answer questions posed in the lab assignment here.
 		\label{fig:original_logo}
 		
 		\includegraphics[width=1\textwidth,trim={0cm 9cm 0cm 0cm},clip]{githistory.PNG}
-		\caption{Figure 2: Screenshot of Git History}
+		\caption{Screenshot of Git History}
 \end{figure}
 \clearpage
 \section*{Code}
-
-
+	\caption{Figure 3: Example Code}
+	\Verilog{lab1_example_code.sv}
 \end{document}
