--- a/2137_Lab 2 _report_.tex
+++ b/2137_Lab 2 _report_.tex
@@ -66,7 +66,7 @@
 
 \section*{Summary}
 
-The purpose of this lab was to build and explore the behviors of logic gates. We first built an OR Gate, second a Not Gate and third a Nor Gate. The last logic gate was a combination of two Not Gates and a single Nor Gate.    
+The purpose of this lab was to build and explore the behviors of logic gates. We first built an OR Gate, second a Not Gate and third a Nor Gate. The last logic gate was a combination of two Not Gates and a single Nor Gate.      
 
 
 \section*{Q\&A}
@@ -81,8 +81,22 @@ The purpose of this lab was to build and explore the behviors of logic gates. We
 
 
 \section*{Results}
+%\clearpage
+%\begin{center}
+	
+\begin{figure*}\centering
+		%\begin{center}
+		\includegraphics[width=.5\textwidth,page=1]{Lab_2_Scan.pdf}
+		%\end{center}
+	%\begin{figure*}
+		%\begin{center}
+			\includegraphics[width=.5\textwidth,page=2]{Lab_2_Scan.pdf}
+			\caption{Schematics and drawing of current path for each logic gate}
+		%\end{center}	
+	%\end{figure*}	
+\end{figure*}
 
-\begin{center}
+%\begin{center}
 	\begin{tabular}{l|r|r}
 	 A & B & Led \\
 	\midrule
@@ -92,12 +106,12 @@ The purpose of this lab was to build and explore the behviors of logic gates. We
 	1 & 1 & 1  \\
 	\bottomrule
 	
+	%\caption{Table 1: Truth Table of the Final gate.}
+	
 
 	\end{tabular}\medskip
-		\begin{center}
-				\caption{Table 1: Truth Table of the Final gate. }
-		\end{center}
-\end{center}
+%\end{center}
+%\end{center}
 
 
 \section*{Code}
