--- a/2137_Lab 2 _report_.tex
+++ b/2137_Lab 2 _report_.tex
@@ -81,23 +81,22 @@ The purpose of this lab was to build and explore the behviors of logic gates. We
 
 
 \section*{Results}
-%\clearpage
-%\begin{center}
-	
-\begin{figure*}\centering
-		%\begin{center}
-		\includegraphics[width=.5\textwidth,page=1]{Lab_2_Scan.pdf}
-		%\end{center}
-	%\begin{figure*}
-		%\begin{center}
-			\includegraphics[width=.5\textwidth,page=2]{Lab_2_Scan.pdf}
-			\caption{Schematics and drawing of current path for each logic gate}
-		%\end{center}	
-	%\end{figure*}	
-\end{figure*}
+\begin{center}
+\begin{figure}
+		\includegraphics[width=1\textwidth,page=1]{Lab_2_Scan.pdf}
+\end{figure}
 
-%\begin{center}
-	\begin{tabular}{l|r|r}
+\begin{figure}
+		\includegraphics[width=1\textwidth,page=2]{Lab_2_Scan.pdf}
+			\caption{Schematics and drawing of current path for each logic gate}
+\end{figure}
+\end{center}
+
+\begin{center}
+ 	\caption{Table 1: Truth Table of the Final gate.}
+	
+	\begin{tabular}{cc|c} 
+		\toprule
 	 A & B & Led \\
 	\midrule
 	0 & 0 & 0  \\
@@ -106,14 +105,12 @@ The purpose of this lab was to build and explore the behviors of logic gates. We
 	1 & 1 & 1  \\
 	\bottomrule
 	
-	%\caption{Table 1: Truth Table of the Final gate.}
-	
 
 	\end{tabular}\medskip
-%\end{center}
-%\end{center}
+\end{center}
 
 
+\clearpage
 \section*{Code}
 
 
