Made a Lab 3 folder with needed files

--- a/Lab 3 Adders/2137_report_template.tex
+++ b/Lab 3 Adders/2137_report_template.tex
@@ -60,60 +60,30 @@
 %=========== Body  ====================================
 \begin{document}
 
-\title{ELC 2137 Lab 2: Transistor Logic Gates}
-\author{Jake Simmons and Haonan Jin}
+\title{ELC 2137 Lab \#\#: Lab Title}
+\author{Put your name(s) here}
+
 \maketitle
+
 
 \section*{Summary}
 
-The purpose of this lab was to build and explore the behviors of logic gates. We first built an OR Gate, second a Not Gate and third a Nor Gate. The last logic gate was a combination of two Not Gates and a single Nor Gate.      
+Type the summary of your experiment and results here.  
 
 
 \section*{Q\&A}
 
-\begin{enumerate}
-	\item What logic operation does the Final gate implement?
-		\begin{enumerate}
-			\item The logic operation that the Final gate implements is an And Gate.
-		\end{enumerate}
-\end{enumerate}
-
+Answer questions posed in the lab assignment here.
 
 
 \section*{Results}
-\begin{center}
-\begin{figure}
-		\includegraphics[width=1\textwidth,page=1]{Lab_2_Scan.pdf}
-\end{figure}
 
-\begin{figure}
-		\includegraphics[width=1\textwidth,page=2]{Lab_2_Scan.pdf}
-			\caption{Schematics and drawing of current path for each logic gate}
-\end{figure}
-\end{center}
-
-\begin{center}
- 	\caption{Table 1: Truth Table of the Final gate.}
-	
-	\begin{tabular}{cc|c} 
-		\toprule
-	 A & B & Led \\
-	\midrule
-	0 & 0 & 0  \\
-	0 & 1 & 0 \\
-	1 & 0 & 0  \\
-	1 & 1 & 1  \\
-	\bottomrule
-	
-
-	\end{tabular}\medskip
-\end{center}
+In this section, put your simulation waveforms, results tables, pictures of hardware, and any other required items.
 
 
-\clearpage
 \section*{Code}
 
-
+Include all of the code you wrote or modified here.
 
 
 \end{document}
