--- a/Lab 4 Subtractor/2137_Lab4_Report.tex
+++ b/Lab 4 Subtractor/2137_Lab4_Report.tex
@@ -60,8 +60,8 @@
 %=========== Body  ====================================
 \begin{document}
 
-\title{ELC 2137 Lab \#\#: Lab Title}
-\author{Put your name(s) here}
+\title{ELC 2137 Lab 4: Subtractor}
+\author{Jake Simmons and Haonan Jin }
 
 \maketitle
 
