--- a/Lab 4 Subtractor/2137_Lab4_Report.tex
+++ b/Lab 4 Subtractor/2137_Lab4_Report.tex
@@ -73,14 +73,58 @@ Type the summary of your experiment and results here.
 
 \section*{Q\&A}
 
-Answer questions posed in the lab assignment here.
+\begin{enumerate}
+	\item 
+		\begin{enumerate}
+			\item 
+		\end{enumerate}
+\end{enumerate}
+
+\begin{enumerate}
+	\item 
+	\begin{enumerate}
+		\item 
+	\end{enumerate}
+\end{enumerate}
+
+\begin{enumerate}
+	\item 
+	\begin{enumerate}
+		\item 
+	\end{enumerate}
+\end{enumerate}
+
+\begin{enumerate}
+	\item 
+	\begin{enumerate}
+		\item 
+	\end{enumerate}
+\end{enumerate}
 
 
 \section*{Results}
 
-In this section, put your simulation waveforms, results tables, pictures of hardware, and any other required items.
+\begin{center}
+	\begin{figure}
+		\includegraphics[width=1\textwidth]{thumbnail_Image.jpg}
+		\caption{Picture of Assembled Circuit}
+	\end{figure}
+\end{center}
 
+\begin{center}
+	\begin{figure}
+		\includegraphics[width=.8\textwidth]{scanj.pdf}
+		\caption{Two-Bit Adder/Subtractor Schematic}
+	\end{figure}
+\end{center}
+\begin{center}
+	\begin{figure}
+		\includegraphics[width=1\textwidth]{KIC_Document.pdf}
+		\caption{Circuit Demonstration Page}
+	\end{figure}
+\end{center}
 
+\clearpage
 \section*{Code}
 
 Include all of the code you wrote or modified here.
