final save and clean up

--- a/Lab 4 Subtractor/2137_Lab4_Report.tex
+++ b/Lab 4 Subtractor/2137_Lab4_Report.tex
@@ -68,34 +68,34 @@
 
 \section*{Summary}
 
-Type the summary of your experiment and results here.  
+In this experiment we made a subtractor from a adder. First we made an adder by combining two full adders which is a two-bit adder. Then we added three XOR Gates, this was becasue we needed to invert two of our inputs to generate the 2's complement. The third XOR Gate inverted the carry out bit because Figure 3 shows that the carry out bit in our expected results was the opposite of what mathematically it should have been.
 
 
 \section*{Q\&A}
 
 \begin{enumerate}
-	\item 
+	\item Why did we use two full adders instead of a half adder and a full adder?
 		\begin{enumerate}
 			\item 
 		\end{enumerate}
 \end{enumerate}
 
 \begin{enumerate}
-	\item 
+	\item How many input combinations would it take to exhaustively test the adder/subtractor?
 	\begin{enumerate}
 		\item 
 	\end{enumerate}
 \end{enumerate}
 
 \begin{enumerate}
-	\item 
+	\item Why were the combinations given in the truth table chosen?
 	\begin{enumerate}
 		\item 
 	\end{enumerate}
 \end{enumerate}
 
 \begin{enumerate}
-	\item 
+	\item Do the results from your adder/subtractor match what you would expect from theory? Explain any discrepancies.
 	\begin{enumerate}
 		\item 
 	\end{enumerate}
@@ -127,7 +127,6 @@ Type the summary of your experiment and results here.
 \clearpage
 \section*{Code}
 
-Include all of the code you wrote or modified here.
 
 
 \end{document}
