--- a/Lab 4 Subtractor/2137_Lab4_Report.tex
+++ b/Lab 4 Subtractor/2137_Lab4_Report.tex
@@ -68,37 +68,28 @@
 
 \section*{Summary}
 
-In this experiment we made a subtractor from a adder. First we made an adder by combining two full adders which is a two-bit adder. Then we added three XOR Gates, this was becasue we needed to invert two of our inputs to generate the 2's complement. The third XOR Gate inverted the carry out bit because Figure 3 shows that the carry out bit in our expected results was the opposite of what mathematically it should have been.
+In this experiment we made a subtractor from a adder. First we made an adder by combining two full adders which is a two-bit adder. Then we added three XOR Gates, this was becasue we needed to invert two of our inputs to generate the 2's complement. The third XOR Gate inverted the carry out bit because Figure 3 shows that the carry out bit in our expected results was the opposite of what it should have been mathematically.
 
 
 \section*{Q\&A}
 
 \begin{enumerate}
 	\item Why did we use two full adders instead of a half adder and a full adder?
-		\begin{enumerate}
-			\item 
-		\end{enumerate}
-\end{enumerate}
+	
+		We used two full adders instead of a half adder and a full adder becasue if we used a half adder and full adder we would not get all three outputs. We would lose the S2 and Cout outputs.  
 
-\begin{enumerate}
 	\item How many input combinations would it take to exhaustively test the adder/subtractor?
-	\begin{enumerate}
-		\item 
-	\end{enumerate}
-\end{enumerate}
+	
+		It would take 16 combinations to exhaustively test the adder/subtractor. 
 
-\begin{enumerate}
 	\item Why were the combinations given in the truth table chosen?
-	\begin{enumerate}
-		\item 
-	\end{enumerate}
-\end{enumerate}
+	
+		The combinations given in the truth table were chosen to show that using the 2's complement in binary to subtract numbers does not always work.
 
-\begin{enumerate}
 	\item Do the results from your adder/subtractor match what you would expect from theory? Explain any discrepancies.
-	\begin{enumerate}
-		\item 
-	\end{enumerate}
+	
+		The results from our adder/subtractor do not match what was expected from theory. This is becasue the actual adder/subtractor has 5 inputs while based on theory there are only four inputs. The 5th input is a carry in bit which when missing causes the carry out bit to be opposite in theory compared to the actual results. 
+
 \end{enumerate}
 
 
