--- a/Lab9_ALU_2/Lab9_Report.tex
+++ b/Lab9_ALU_2/Lab9_Report.tex
@@ -92,8 +92,25 @@ Answer questions posed in the lab assignment here.
 	\end{tabular}\medskip
 	
 %	\includegraphics{sim_waveform}
-%	\caption{Example of a simulation waveform and ERT}
+	\caption{ERT and Simultion Waveforms of Register}
 %	\label{fig:sim_with_table}
+\end{figure}
+
+\begin{figure}[ht]\centering
+	\begin{tabular}{l|rrrrrr}
+		Time (ns): & 0-10 & 10-20 & 20-30 & 30-40 & 40-50 & 50-60  \\
+		\midrule
+		in0 (dec) & 5 & 10 & 1 & 3 & 5 & 15 \\
+		in1 (dec) & 5 & 5 & 2 & 4 & 6 & 12 \\
+		op (dec) & 0 & 1 & 2 & 3 & 4 & 5 \\
+		\midrule 
+		out (dec) & a & 5 & 0 & 7 & 3 & 15 \\
+		\bottomrule
+	\end{tabular}\medskip
+	
+	%	\includegraphics{sim_waveform}
+		\caption{ERT and Simulation Waveforms of ALU}
+	%	\label{fig:sim_with_table}
 \end{figure}
 
 
