--- a/Lab9_ALU_2/Lab9_Report.tex
+++ b/Lab9_ALU_2/Lab9_Report.tex
@@ -87,7 +87,7 @@ Answer questions posed in the lab assignment here.
 		en & 0 & 0 & 1 & 1 & 1$\rightarrow$0 & 0$\rightarrow$1 & 1$\rightarrow$0 & 0 & 0$\rightarrow$1 & 1 & 1 \\
 		rst & 0 & 0$\rightarrow$1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
 		\midrule 
-		Q (hex) & X & X$\rightarrow$0 & 0 & 0 & 0 & 3 & 0 & 0 & 6 & 0 & 0 \\
+		Q (hex) & X & X$\rightarrow$0 & 0 & A & A & A & A & A & A & 6 & 6 \\
 		\bottomrule
 	\end{tabular}\medskip
 	
@@ -100,11 +100,11 @@ Answer questions posed in the lab assignment here.
 	\begin{tabular}{l|rrrrrr}
 		Time (ns): & 0-10 & 10-20 & 20-30 & 30-40 & 40-50 & 50-60  \\
 		\midrule
-		in0 (dec) & 5 & 10 & 1 & 3 & 5 & 15 \\
-		in1 (dec) & 5 & 5 & 2 & 4 & 6 & 12 \\
+		in0 (dec) & 5 & A & 1 & 3 & 5 & F \\
+		in1 (dec) & 5 & 5 & 2 & 4 & 6 & C \\
 		op (dec) & 0 & 1 & 2 & 3 & 4 & 5 \\
 		\midrule 
-		out (dec) & a & 5 & 0 & 7 & 3 & 15 \\
+		out (dec) & A & 5 & 0 & 7 & 3 & F \\
 		\bottomrule
 	\end{tabular}\medskip
 	
