--- a/Lab9_ALU_2/Lab9_Report.tex
+++ b/Lab9_ALU_2/Lab9_Report.tex
@@ -91,9 +91,9 @@ Answer questions posed in the lab assignment here.
 		\bottomrule
 	\end{tabular}\medskip
 	
-%	\includegraphics{sim_waveform}
+	\includegraphics{register_test.JPG}
 	\caption{ERT and Simultion Waveforms of Register}
-%	\label{fig:sim_with_table}
+	\label{fig:sim_with_table}
 \end{figure}
 
 \begin{figure}[ht]\centering
@@ -108,13 +108,13 @@ Answer questions posed in the lab assignment here.
 		\bottomrule
 	\end{tabular}\medskip
 	
-	%	\includegraphics{sim_waveform}
+		\includegraphics[width=0.9\textwidth]{ALU_test.JPG}
 		\caption{ERT and Simulation Waveforms of ALU}
-	%	\label{fig:sim_with_table}
+		\label{fig:sim_with_table}
 \end{figure}
 
 
-
+\clearpage
 \section*{Code}
 
 Include all of the code you wrote or modified here.
