--- a/Lab9_ALU_2/Lab9_Report.tex
+++ b/Lab9_ALU_2/Lab9_Report.tex
@@ -218,7 +218,7 @@ endmodule
 \end{lstlisting}
 
 \begin{lstlisting}[style=Verilog,
-caption=Register Module Test Code,
+caption=Register Test Bench Code,
 label=code:ex 
 ]
 `timescale 1ns / 1ps
@@ -255,7 +255,7 @@ endmodule
 \end{lstlisting}
 
 \begin{lstlisting}[style=Verilog,
-caption=ALU Module Test Code,
+caption=ALU Test Bench Code,
 label=code:ex 
 ]
 `timescale 1ns / 1ps
