--- a/Lab9_ALU_2/Lab9_Report.tex
+++ b/Lab9_ALU_2/Lab9_Report.tex
@@ -68,12 +68,11 @@
 
 \section*{Summary}
 
-Type the summary of your experiment and results here.  
+The purpose of this lab was to explore the ideas od combinational and regular sequentional logic in SR Latches, D Latches, D flip-flop and D registers. In this lab, a Register module was created and succesfully tested. An ALU module was created and succesfully tested.  
 
 
 \section*{Q\&A}
 
-Answer questions posed in the lab assignment here.
 
 
 \section*{Results}
@@ -111,6 +110,13 @@ Answer questions posed in the lab assignment here.
 		\includegraphics[width=0.9\textwidth]{ALU_test.JPG}
 		\caption{ERT and Simulation Waveforms of ALU}
 		\label{fig:sim_with_table}
+\end{figure}
+
+\begin{figure}[ht]\centering
+	\includegraphics[width=0.9\textwidth]{top_module_test.JPG}
+	\caption{Top Level Simulation Waveforms}
+	\label{fig:sim}
+	
 \end{figure}
 
 
