--- a/Lab9_ALU_2/Lab9_Report.tex
+++ b/Lab9_ALU_2/Lab9_Report.tex
@@ -68,7 +68,7 @@
 
 \section*{Summary}
 
-The purpose of this lab was to explore the ideas od combinational and regular sequentional logic in SR Latches, D Latches, D flip-flop and D registers. In this lab, a Register module was created and succesfully tested. An ALU module was created and succesfully tested.  
+The purpose of this lab was to create an Arithmetic Logic Unit capable of operations. As well as explore the ideas of combinational and regular sequentional logic in SR Latches, D Latches, D flip-flop and D registers. In this lab, a Register module was created and succesfully tested. An ALU module was created and succesfully tested.  
 
 
 \section*{Q\&A}
