--- a/Lab10_7seg/Lab10_Report.tex
+++ b/Lab10_7seg/Lab10_Report.tex
@@ -96,7 +96,25 @@ Answer questions posed in the lab assignment here.
 	\label{fig:sim_with_table}
 \end{figure}
 
-
+\begin{figure}[ht]\centering
+	\begin{tabular}{l|rrrrrrrrrrrrrrrrrrrrr}
+		Time (ms): & 0 & 2 & 4 & 6 & 8  & 10 & 12 & 14 & 16 & 18 & 20 & 22 & 24 & 26 & 28  & 30 & 32 & 34 & 36 & 38 & 40  \\
+		\midrule
+		clk & 0 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 \\
+		rst & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
+		data & 0 & 1 & 1 & 2 & 3 & 4 & 4 & 5 & 6 & 7 & 8 & 8 & 9 & a & b & c & c & d & e & e & f\\
+		hexdec & 0 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 0 & 0 & 0 \\
+		\midrule
+		seg & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 & 0\\
+		dp & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1\\
+		an & e & e & e & e & e & d & d & d & 7 & 7 & 7 & e & e & e & d & d & d & b & b & b & 7\\
+		\bottomrule
+	\end{tabular}\medskip
+	
+	\includegraphics[width=1.15 \textwidth]{sseg4_TDM_Test.JPG}
+	\caption{sseg4TDM simulation waveform and ERT}
+	\label{fig:sim_with_table}
+\end{figure}
 
 \section*{Code}
 
