--- a/Lab10_7seg/Lab10_Report.tex
+++ b/Lab10_7seg/Lab10_Report.tex
@@ -116,6 +116,12 @@ Answer questions posed in the lab assignment here.
 	\label{fig:sim_with_table}
 \end{figure}
 
+\begin{figure}[ht]\centering
+	\includegraphics[width=1.15 \textwidth]{sseg4_TDM_Schematic.pdf}
+	\caption{sseg4TDM Schematic}
+	\label{fig:sim_with_table}
+\end{figure}
+
 \clearpage
 \section*{Code}
 
