--- a/Lab10_7seg/Lab10_Report.tex
+++ b/Lab10_7seg/Lab10_Report.tex
@@ -73,7 +73,27 @@ Type the summary of your experiment and results here.
 
 \section*{Q\&A}
 
-Answer questions posed in the lab assignment here.
+\begin{enumerate}
+		\item What are the three main “groups” of the RTL deﬁnition of sequential logic?
+		\begin{enumerate}
+			\item 	The three main groups of the RTL definitions of sequential logic is event driven, clock driven and pulse driven. 
+		\end{enumerate}
+\end{enumerate}
+
+\begin{enumerate}
+	\item Copy Figure 10.3b onto your own paper (or do it electronically) and draw three boxes around the components that belong to each group. Include your annotated ﬁgure in your report.
+	\begin{enumerate}
+		\item 
+	\end{enumerate}
+\end{enumerate}
+
+\begin{enumerate}
+	\item(c) If instead of a counter, you wanted to make a shift register that moved the input bits from right to left (low to high). What would you put on the line Q next = /*???*/
+	\begin{enumerate}
+		\item To make a shift register that moved bits from right to left, you would put on the line Q next = 
+	\end{enumerate}
+\end{enumerate}
+
 
 
 \section*{Results}
@@ -117,9 +137,15 @@ Answer questions posed in the lab assignment here.
 \end{figure}
 
 \begin{figure}[ht]\centering
-	\includegraphics[width=1.15 \textwidth]{sseg4_TDM_Schematic.pdf}
 	\caption{sseg4TDM Schematic}
-	\label{fig:sim_with_table}
+	\includegraphics[width=1.15 \textwidth]{sseg4_TDM_Schematic.pdf}
+	\label{fig:picture}
+\end{figure}
+
+\begin{figure}[ht]\centering
+	\caption{calclab10 Schematic}
+	\includegraphics[width=1.15 \textwidth]{calc_lab10_Schematic.pdf}
+	\label{fig:picture}
 \end{figure}
 
 \clearpage
