--- a/Lab10_7seg/Lab10_Report.tex
+++ b/Lab10_7seg/Lab10_Report.tex
@@ -68,9 +68,9 @@
 
 \section*{Summary}
 
+The purpose of this lab was to learn how to use the technique called Time-Division Multiplexing. We are using Time-Division Multiplexing to slow down the signals going to the 4 digit display. This is so there will be enough time for a human to process and see what is actually being displayed. First, a counter module was made and succesfully simulated. Secondly, the sseg4 from a previous lab was modified and the counter was added to the module. A schematic of the new, sseg4TDM, is provided. After testing sseg4TDM, the top level module, calclab10, was created. The top level module toplab9 was used in this module which was also created in a previous lab.  
 
-
-
+\clearpage
 \section*{Q\&A}
 
 \begin{enumerate}
@@ -94,7 +94,7 @@
 \end{enumerate}
 
 
-
+\clearpage
 \section*{Results}
 
 \begin{figure}[ht]\centering
