--- a/Lab10_7seg/Lab10_Report.tex
+++ b/Lab10_7seg/Lab10_Report.tex
@@ -403,9 +403,7 @@ label=calclab10
 //ELC 2137 Jake Simmons 2020-4-8
 
 module calc_lab10(
-	input hex_dec,
 	input [17:0] clock,
-	input sign,
 	input btnU,
 	input btnD,
 	input [11:0] sw,
@@ -419,11 +417,11 @@ module calc_lab10(
 	wire [7:0] W1;
 	wire [7:0] W2;
 
-	sseg4_TDM disp_unit( .data({W2, 8'b00000000}), .hex_dec(hex_dec),
-	.reset(btnC), .clock(clock), .sign(sign), 
+	sseg4_TDM disp_unit( .data({W2, 8'b00000000}), .hex_dec(sw[15]),
+	.reset(btnC), .clock(clock), .sign(sw[14]), 
 	.seg(seg), .dp(dp), .an(an));
 
-	top_lab9 calc_unit( .btnU(btnU), .btnD(btnD), .sw(sw),
+	top_lab9 calc_unit( .btnU(btnU), .btnD(btnD), .sw(sw[11:0]),
 	.clk(clk), .btnC(btnC), .led({W1, W2}) );
 
 	assign led[7:0] = W1;
