--- a/Lab10_7seg/Lab10_Report.tex
+++ b/Lab10_7seg/Lab10_Report.tex
@@ -403,11 +403,10 @@ label=calclab10
 //ELC 2137 Jake Simmons 2020-4-8
 
 module calc_lab10(
-	input [17:0] clock,
+	input clk,
 	input btnU,
 	input btnD,
 	input [11:0] sw,
-	input clk,
 	input btnC,
 	output [15:0] led,
 	output [6:0] seg,
@@ -415,16 +414,15 @@ module calc_lab10(
 	output [3:0] an
 	);
 	wire [7:0] W1;
-	wire [7:0] W2;
 
-	sseg4_TDM disp_unit( .data({W2, 8'b00000000}), .hex_dec(sw[15]),
+	sseg4_TDM disp_unit( .data({W1, 8'b00000000}), .hex_dec(sw[15]),
 	.reset(btnC), .clock(clock), .sign(sw[14]), 
 	.seg(seg), .dp(dp), .an(an));
 
 	top_lab9 calc_unit( .btnU(btnU), .btnD(btnD), .sw(sw[11:0]),
-	.clk(clk), .btnC(btnC), .led({W1, W2}) );
+	.clk(clk), .btnC(btnC), .led(led) );
 
-	assign led[7:0] = W1;
+	assign w1 = led[15:8];
 endmodule
 
 
