--- a/Lab10_7seg/Lab10_Report.tex
+++ b/Lab10_7seg/Lab10_Report.tex
@@ -105,8 +105,8 @@ The purpose of this lab was to learn how to use the technique called Time-Divisi
 		en & 0 & 1 & 1 & 1 & 0 & 0 & 1 & 0 & 1 & 0 & 1 & 1 & 0 & 1 & 1 & 1 & 1 \\
 		rst & 0 & 1 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 \\
 		\midrule
-		W1 & X & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & a & b & c & d & e & f & 0 \\
-		W2 & X & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 0\\
+		count & X & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & a & b & c & d & e & f & 0 \\
+		tick & X & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 0\\
 		\bottomrule
 	\end{tabular}\medskip
 	
@@ -124,7 +124,7 @@ The purpose of this lab was to learn how to use the technique called Time-Divisi
 		data & 0 & 1 & 1 & 2 & 3 & 4 & 4 & 5 & 6 & 7 & 8 & 8 & 9 & a & b & c & c & d & e & e & f\\
 		hexdec & 0 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 0 & 0 & 0 \\
 		\midrule
-		seg & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 0 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 0 & 0 & 0\\
+		seg & 40 & 79 & 79 & 24 & 40 & 40 & 40 & 40 & 40 & 40 & 3f & 3f & 30 & 08 & 40 & 79 & 79 & 40 & 40 & 40 & 40\\
 		dp & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1 & 1\\
 		an & e & e & e & e & e & d & d & d & 7 & 7 & 7 & e & e & e & d & d & d & b & b & b & 7\\
 		\bottomrule
@@ -196,12 +196,12 @@ label=Counter_test
 
 module counter_test();
 	reg clk, en, rst; 
-	wire [3:0] W1;
-	wire W2;
+	wire [3:0] count;
+	wire tick;
 
-	Counter #(.N(4)) count1( .tick(W2), .clk(clk), 
+	Counter #(.N(4)) count1( .tick(tick), .clk(clk), 
 
-	.en(en), .rst(rst), .count(W1) );
+	.en(en), .rst(rst), .count(count) );
 
 
 
@@ -311,9 +311,9 @@ module sseg4_TDM(
 	wire W6;    
 	wire [1:0] W7;
 
-	Counter #(.N(18)) timer( .clk(clock),.en(1'b1), .tick(W7), .rst(reset));  
+	Counter #(.N(18)) timer( .clk(clock), .en(1'b1), .tick(W7), .rst(reset));  
 	
-	Counter #(.N(2)) counter2( .clk(W7),.en(1'b1),.count(digit_sel), .rst(reset) );  
+	Counter #(.N(2)) counter2( .clk(clock),.en(W7),.count(digit_sel), .rst(reset) );   
 	  
 	BCD11_2 B1( .in11(data[10:0]), .out11(W1));
 	
