--- a/Lab10_7seg/Lab10_Report.tex
+++ b/Lab10_7seg/Lab10_Report.tex
@@ -137,7 +137,7 @@ The purpose of this lab was to learn how to use the technique called Time-Divisi
 
 \begin{figure}[ht]\centering
 	\caption{sseg4TDM Schematic}
-	\includegraphics[width=1.15 \textwidth]{sseg4_TDM_Schematic.pdf}
+	\includegraphics[width=1.05\textwidth]{sseg4_TDM_Schematic.jpeg}
 	\label{fig:picture}
 \end{figure}
 
