--- a/Lab10_7seg/Lab10_Report.tex
+++ b/Lab10_7seg/Lab10_Report.tex
@@ -143,7 +143,7 @@ The purpose of this lab was to learn how to use the technique called Time-Divisi
 
 \begin{figure}[ht]\centering
 	\caption{calclab10 Schematic}
-	\includegraphics[width=1.15 \textwidth]{calc_lab10_Schematic.pdf}
+	\includegraphics[width=1.15 \textwidth]{calc_lab10_Schematic.jpeg}
 	\label{fig:picture}
 \end{figure}
 
@@ -415,7 +415,7 @@ module calc_lab10(
 	);
 	wire [7:0] W1;
 
-	sseg4_TDM disp_unit( .data({W1, 8'b00000000}), .hex_dec(sw[15]),
+	sseg4_TDM disp_unit( .data({8'b00000000, W1}), .hex_dec(sw[15]),
 	.reset(btnC), .clock(clock), .sign(sw[14]), 
 	.seg(seg), .dp(dp), .an(an));
 
