--- a/Lab10_7seg/Lab10_Report.tex
+++ b/Lab10_7seg/Lab10_Report.tex
@@ -139,7 +139,7 @@ The purpose of this lab was to learn how to use the technique called Time-Divisi
 
 \begin{figure}[ht]\centering
 	\caption{sseg4TDM Schematic}
-	\includegraphics[trim={0cm 0cm 12.5cm 0cm},clip]{sseg4_TDM_Schematic.jpeg}
+	\includegraphics[width=1.05\textwidth]{sseg4_TDM_Schematic.jpeg}
 	\label{fig:picture}
 \end{figure}
 
