--- a/Lab11_guess/Lab11_guess.runs/impl_1/.init_design.begin.rst
+++ b/Lab11_guess/Lab11_guess.runs/impl_1/.init_design.begin.rst
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
 <ProcessHandle Version="1" Minor="0">
-    <Process Command="vivado.bat" Owner="School" Host="DESKTOP-9OU7RV8" Pid="8212">
+    <Process Command=".planAhead." Owner="School" Host="DESKTOP-9OU7RV8" Pid="1848">
     </Process>
 </ProcessHandle>
